# test_gRPC_server

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  remote_target.proto
server/: CMakeLists.txt  DeviceSpec.cpp  DeviceSpec.h  connection.h  main.cpp  server.cpp  server.h
